--- a/react-app/index.html
+++ b/react-app/index.html
@@ -7,8 +7,38 @@
     <title>my-app</title>
   </head>
   <body>
-   <div class="react-navbar"></div>
-    
+    <!-- Test de l'affichage des composants dans le navigateur -->
+    <div class="react-navbar"></div>
+
+    <div class="react-frontpagehero"></div>
+    <div class="react-twoimagestextsection"></div>
+    <div class="react-simpleimagetextsection"></div>
+    <div class="react-flagshipproductsmodulesection"></div>
+    <div class="react-googlereviewssection"></div>
+    <div class="react-gallerysection"></div>
+    <div class="react-localreviewssection"></div>
+    <div class="react-faqsection"></div>
+    <div class="react-reservationsection"></div>
+    <div class="react-introductionsection1"></div>
+    <div class="react-introductionsection2"></div>
+    <div class="react-flagshipproductsection"></div>
+    <div class="react-productssection"></div>
+    <div class="react-complexfourimagessection"></div>
+    <div class="react-complextripleimagessection"></div>
+    <div class="react-complexmessageformsection"></div>
+    <div class="react-localreviewslistsection"></div>
+    <div class="react-simplemessageformsection"></div>
+    <div class="react-ctasection"></div>
+    <div class="react-simpletextbuttonsection"></div>
+    <div class="react-headerpagecontainer"></div>
+    <div class="react-textsection"></div>
+    <div class="react-headersection"></div>
+    <div class="react-productimagessection"></div>
+    <div class="react-descriptionsection"></div>
+    <div class="react-navigationsection"></div>
+
+    <div class="react-footer"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
